jackett/jackett-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jackett
  namespace: jackett
spec:
  type: ClusterIP
  ports:
    - port: 9117
      targetPort: 9117
  selector:
    app: jackett
